<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_apcol_lista"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#40FFFFFF"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#40FFFFFF">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Filtros"
                android:textColor="#A0000000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_relatorio_mes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_baseline_delete_24"
                    android:ems="10"
                    android:hint="Mês"
                    android:inputType="none" />

                <EditText
                    android:id="@+id/edt_relatorio_ano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_baseline_delete_24"
                    android:ems="10"
                    android:hint="Ano"
                    android:inputType="none" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_relatorio_endereco"
                    style="@style/Orz_TextInputLayout"
                    android:focusedByDefault="true"
                    android:hint="@string/txt_partida_endereco"
                    app:endIconDrawable="@drawable/ic_baseline_delete_24"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:errorIconTint="@android:color/holo_red_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Orz_TextInputEditText"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textCapSentences">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_relatorio_posicao"
                    style="@style/Orz_TextInputLayout"
                    android:hint="@string/txt_partida_posicao"
                    app:endIconDrawable="@drawable/ic_baseline_delete_24"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Orz_TextInputEditText"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textCapSentences">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_relatorio_posicaosec"
                    style="@style/Orz_TextInputLayout"
                    android:hint="@string/txt_partida_posicaosec"
                    app:endIconDrawable="@drawable/ic_baseline_delete_24"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Orz_TextInputEditText"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textCapSentences">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_relatorio_aplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/Cor_Acentuada"
                android:text="@string/txt_relatorio_aplicar" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>